--- a/Front/src/views/Private/MonEspace/MonEspace.css
+++ b/Front/src/views/Private/MonEspace/MonEspace.css
@@ -47,8 +47,7 @@
 }
 
 .icon-home {
-    height: 35px;
-    margin: 25px 0 0 30px;
+    margin-left: 20px;
 }
 
 .left-desk, .style-img {
